--- a/_config.yml
+++ b/_config.yml
@@ -9,55 +9,53 @@
 # Basic Site Settings
 locale                   : "en-US"
 site_theme               : "default" # The available themes options are "default", "air", "sunrise", "mint", "dirt" and "contrast"
-title                    : "Your Name / Site Title"
+title                    : "Shihao Li"
 title_separator          : "-"
-name                     : &name "Your Name"
-description              : &description "Your Name's academic portfolio"   # Update this with a general description of your site, this is the default if not overridden by a page
-url                      : https://academicpages.github.io # The base hostname & protocol for your site e.g. "https://[your GitHub username].github.io",
-                                                           # or if you already have some other page hosted on Github then use "https://[your GitHub username].github.io/[Your Repo Name]"
+name                     : &name "Shihao Li"
+description              : &description "Ph.D. Student in Mechanical Engineering at UT Austin | Control Theory, Optimization, Reinforcement Learning, Robotics"
+url                      : https://sheehow.github.io # The base hostname & protocol for your site
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
-repository               : "academicpages/academicpages.github.io"
+repository               : "SheeHow/sheehow.github.io"
 
 # Site Author - The following control what appear as part of the author content on the side bar.
 #               If a field is blank the icon and link will not appear, otherwise it will be shown.
 #               Additional customization can be done by editing /_includes/author-profile.html
 author:
   # Biographic information
-  avatar           : "profile.png"
-  name             : "Your Sidebar Name"
-  pronouns         : # example: "she/her"  
-  bio              : "Short biography for the left-hand sidebar"
-  location         : "Earth"
-  employer         : "Red Brick University"
+  avatar           : "profile.png" # [ADD YOUR PHOTO: Upload your photo as "profile.png" to the /images/ folder]
+  name             : "Shihao Li"
+  pronouns         : # example: "he/him" - [OPTIONAL: Add your pronouns if desired]
+  bio              : "Ph.D. Student in Mechanical Engineering at UT Austin. Research in control theory, optimization, reinforcement learning, and robotics."
+  location         : "Austin, Texas"
+  employer         : "The University of Texas at Austin"
   uri              : # URL
-  email            : "none@example.org" 
+  email            : "shihaoli01301@utexas.edu"
 
   # Academic websites
   academia         : # URL
-  arxiv            : # URL - Update with the correct link to your profile
-  googlescholar    : "https://scholar.google.com/citations?user=PS_CX0AAAAAJ"
+  arxiv            : # [OPTIONAL: Add your arXiv author page URL if you have one]
+  googlescholar    : "https://scholar.google.com/citations?hl=zh-CN&user=b8X8voEAAAAJ"
   inspire-hep      : # URL
   impactstory      : # URL
-  orcid            : "https://orcid.org/yourorcidurl"
+  orcid            : # [ADD YOUR ORCID URL: e.g., "https://orcid.org/0000-0000-0000-0000"]
   semantic         : # URL
   ssrn             : # URL
-  pubmed           : "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
-  researchgate     : # URL
+  pubmed           : # URL
+  researchgate     : # [OPTIONAL: Add your ResearchGate profile URL]
   scopus           : # URL
   zotero           : # URL
 
-
   # Repositories and software development
-  bitbucket        : # Username - Update with your username on the site
+  bitbucket        : # Username
   codepen          : # Username
   dribbble         : # Username
-  github           : "academicpages"
-  kaggle           : # Username  
-  stackoverflow    : # User number or user number and name (i.e., use "1" or "1/jeff-atwood")    
+  github           : "SheeHow"
+  kaggle           : # Username
+  stackoverflow    : # User number or user number and name
 
   # Social media
   artstation       : # Username
-  bluesky          : "bsky.app" # Replace this with you Bluesky username
+  bluesky          : # Replace with your Bluesky username if you have one
   facebook         : # Username
   flickr           : # Username
   foursquare       : # Username
@@ -66,7 +64,7 @@ author:
   keybase          : # Username
   instagram        : # Username
   lastfm           : # Username
-  linkedin         : # Username
+  linkedin         : "shihao-li-54692221a"
   mastodon         : # URL
   medium           : # URL
   pinterest        : # Username
@@ -74,7 +72,7 @@ author:
   steam            : # Username
   telegram         : # URL
   tumblr           : # Username
-  twitter          : # Username for X / Twitter
+  twitter          : # [OPTIONAL: Add your X/Twitter username if you have one]
   vine             : # Username
   weibo            : # Username
   wikipedia        : # Username
@@ -87,7 +85,7 @@ publication_category:
   books:
     title: 'Books'
   manuscripts:
-    title: 'Journal Articles'    
+    title: 'Journal Articles'
   conferences:
     title: 'Conference Papers'
 
@@ -302,7 +300,7 @@ sass:
 permalink: /:categories/:title/
 # paginate: 5 # amount of posts to show
 # paginate_path: /page:num/
-timezone: Etc/UTC # https://en.wikipedia.org/wiki/List_of_tz_database_time_zones
+timezone: America/Chicago # Updated to Austin, Texas timezone
 
 
 # Plugins
